@@ -117,6 +117,8 @@ Bugs fixed
 * C++, properly look up ``any`` references.
 * #3624: sphinx.ext.intersphinx couldn't load inventories compressed with gzip
 * #3551: PDF information dictionary is lacking author and title data
+* #3351: intersphinx does not refers context like ``py:module``, ``py:class``
+  and so on.
 
 Deprecated
 ----------
